# arkiv

./: .coveragerc  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SPEC.md  pyproject.toml
docs/: PHILOSOPHY.md
docs/plans/: 2026-02-17-arkiv-implementation.md  2026-02-24-remove-manifest-curate-examples.md  2026-03-15-export-enrichments.md  2026-03-16-write-record-mcp-tool.md
docs/specs/: 2026-03-15-export-enrichments-design.md  2026-04-09-auto-create-db-on-query.md
examples/repos/: README.md  repos.jsonl  schema.yaml
src/arkiv/: __init__.py  __main__.py  bundle.py  cli.py  database.py  manifest.py  readme.py  record.py  render.py  schema.py  server.py  timefilter.py
tests/: test_bundle.py  test_cli.py  test_coverage_gaps.py  test_database.py  test_export.py  test_integration.py  test_manifest.py  test_manifest_import.py  test_readme.py  test_readme_import.py  test_record.py  test_render.py  test_schema.py  test_server.py  test_timefilter.py
