[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arkiv"
version = "0.1.0"
description = "Universal personal data format. JSONL in, SQL out, MCP to LLMs."
requires-python = ">=3.8"
license = {text = "MIT"}
readme = "README.md"
authors = [{name = "Alexander Towell", email = "lex@metafunctor.com"}]
dependencies = ["pyyaml>=6.0"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: System :: Archiving",
]

[project.urls]
Homepage = "https://github.com/queelius/arkiv"
Repository = "https://github.com/queelius/arkiv"
Issues = "https://github.com/queelius/arkiv/issues"

[project.optional-dependencies]
mcp = ["mcp[cli]"]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "mcp[cli]",
]

[project.scripts]
arkiv = "arkiv.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.black]
line-length = 88
target-version = ["py38"]
